# vectorlane

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  demo-output.json  package-lock.json  package.json  tsconfig.json
demo/: build_segments.sh  captions.srt  concat.txt  script.md  storyboard.md
demo/docs/: context.md  gate.md  memory.md
docs/: API.md  CHUNKING.md  CITATIONS.md  CLI.md  EMBEDDINGS.md  INSTALL.md  INTEGRATIONS.md  MCP.md  PYTHON.md  ROADMAP.md  SDK.md  SEARCH.md  SECURITY.md  TROUBLESHOOTING.md  VECTOR_STORE.md
python/: README.md  pyproject.toml
python/talocode_vectorlane/: __init__.py  cli.py  client.py  models.py
python/tests/: test_client.py  test_local.py
scripts/: build.mjs  gen-architecture.py  smoke-test.mjs
src/: cli.ts  index.ts
src/api/: routes.ts  server.ts
src/core/: chunker.ts  citations.ts  config.ts  embedder.ts  errors.ts  ingest.ts  integrations.ts  math.ts  metadata.ts  storage.ts  store.ts  types.ts
src/mcp/: server.ts  tools.ts
src/sdk/: client.ts
test/: api.test.ts  core.test.ts  ingest.test.ts  mcp.test.ts
