[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talocode-vectorlane"
version = "0.1.0"
description = "Open-source local vector memory engine for AI agents — Python SDK and CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Talocode" }]
keywords = ["ai-agents", "vector-search", "embeddings", "rag", "local-first", "talocode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
vectorlane-py = "talocode_vectorlane.cli:main"
